[FIX] Fixed the lack of spacing between buttons. Since Tailwind does not work for some reason, the adjustment was made in demo-store-client/src/App.css

--- a/demo-store-client/src/App.css
+++ b/demo-store-client/src/App.css
@@ -5,6 +5,16 @@
   text-align: center;
 }
 
+nav a {
+  margin-right: 20px;
+  text-decoration: none;
+  color: #0369a1;
+  font-weight: 500;
+}
+nav a:hover {
+  text-decoration: underline;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
